# ro-Installer

./: .gitattributes  .gitignore  COPR.md  LICENSE  README.md  analysis_options.yaml  build.sh  durum.md  eksikler.md  implementation_plan.md  kernel-black-screen-diagnostics.md  kernel.txt  optimizasyon.md  plan.md  pubspec.yaml  ro-installer.spec  test.md  test_qemu_guest_runner.sh  test_qemu_vm.sh
.copr/: .Makefile.kate-swp  Makefile
.github/workflows/: rpm-fedora43.yml
assets/i18n/: ar.json  de.json  en.json  es.json  fa.json  fr.json  it.json  ja.json  locales.json  pt_BR.json  ru.json  tr.json  zh_CN.json
docs/: git-yukleme-notu.md  grafik-driver-politikasi.md  profesyonel-installer-ana-plani.md  ro-apps-packaging-notu.md  siyah-ekran-kernel-notlari.md  sonraki-adim-notu.md  yeni-makine-qemu-rehberi.md
gerçeksistemdenloglar/: kernel-black-screen-analysis-20260505.md
lib/: main.dart
lib/data/: keyboard_presets.dart  location_presets.dart
lib/ffi/: backend_bindings.dart
lib/l10n/: installer_translation_catalog.dart
lib/models/: install_profile.dart  storage_plan.dart
linux/: CMakeLists.txt  org.roasd.installer.policy  qmp_send_keys.py  ro-installer-launcher.sh  ro-installer.desktop  ro-installer.spec.reference
linux/backend/: CMakeLists.txt  installer_core.cpp  system_command.h
scripts/: 01-build-rpm.sh  02-build-iso.sh  03-audit-iso.sh  04-benchmark-copy-paths.sh  build-iso.sh  check-stable.sh  qemu-boot-iso.sh  refresh-local-paths.sh  test-qemu.sh
test/: widget_test.dart
tool/: generate_machine_locale.py  i18n_audit.dart
(+77 files in other folders)
